2005-11-13  Kim F. Storm  <storm@cua.dk>

	* help.el (help-for-help-internal): Fix `a' entry.  Add `d' entry.

2005-11-13  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map):  Move parentheses (again).
	(gud-speedbar-buttons): Match on "const char *" too.

	* progmodes/gdb-ui.el (gdb-var-create-handler)
	(gdb-var-list-children-handler): Match on "const char *" too.
	(gdb-var-evaluate-expression-handler): Match on empty string.
	(gdb-var-update-handler): Only call
	gdb-var-evaluate-expression-handler when required.

2005-11-13  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map): Revert to window-fringes for
	selected window.  This still doesn't work for speedbar.
	(gud-speedbar-buttons): Handle string expressions properly.

	* progmodes/gdb-ui.el (gdb-var-evaluate-expression-handler)
	(gdb-var-create-handler): Handle string expressions properly.
	(gdb-var-list-children-regexp, gdb-var-list-children-handler):
	Handle string expressions properly.  Move "type" field into
	regexp.

2005-11-12  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-maybe-message): New function to reduce
	code duplication: invokes `message' iff baud-rate is high enough.
	(bookmark-write-file): Use above instead of an inline conditional.
	(bookmark-load): Same.

2005-11-12  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-write-file): Don't visit the destination
	file, just write the data to it using write-region.  This is
	similar to revision 1.32 of saveplace.el, but with an additional
	change to avoid visiting the file in the first place.

2005-11-12  Chong Yidong  <cyd@stupidchicken.com>

	* hi-lock.el (hi-lock-mode): Set the default value of
	font-lock-defaults.

2005-11-11  Luc Teirlinck  <teirllm@auburn.edu>

	* find-lisp.el (find-lisp-find-dired-insert-file): Pass `string'
	arg to `file-attributes'.
	(find-lisp-format): The UID and GID can now be strings.

2005-11-12  Kim F. Storm  <storm@cua.dk>
