@@ -1,3 +1,7 @@
+2005-11-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-util.el (top): Fix compilation warning.
+
 2005-11-13  Kim F. Storm  <storm@cua.dk>
 
 	* help.el (help-for-help-internal): Fix `a' entry.  Add `d' entry.
